--- a/src/Views/Item/Index.cshtml
+++ b/src/Views/Item/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>List of To-Do Items</h2>
+<h2>List of Dodeca Items</h2>
 
 <table class="table">
     <tr>
